force-app/main/default/objects/abc_Order__c/abc_Order__c.object-meta.xml
<CustomObject>
    <label>Pharmacy Order</label>
    <nameField>
        <displayFormat>ORD-{0000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pharmacy Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>