force-app/main/default/objects/abc_Order__c/fields/abc_City__c.field-meta.xml
<CustomField>
    <fullName>abc_City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abc_City_values</valueSetName>
    </valueSet>
</CustomField>