force-app/main/default/objects/abc_Order__c/fields/abc_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>abc_Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>guest</fullName>
                <default>true</default>
                <label>guest</label>
            </value>
            <value>
                <fullName>registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>