force-app/main/default/objects/abc_Order__c/fields/abc_Customer__c.field-meta.xml
<CustomField>
    <fullName>abc_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populated by API for authenticated users. Left null for guests.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>abc_Customer__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>