force-app/main/default/objects/abc_Order__c/fields/abc_Detailed_Address__c.field-meta.xml
<CustomField>
    <fullName>abc_Detailed_Address__c</fullName>
    <description>Detailed address of the customer as a text area.</description>
    <label>Detailed Address</label>
    <type>TextArea</type>
</CustomField>