force-app/main/default/objects/abc_Order__c/fields/abc_Email__c.field-meta.xml
<CustomField>
    <fullName>abc_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
    <inlineHelpText>Stores guest data to avoid Person Account/Data Skew bloat.</inlineHelpText>
</CustomField>