force-app/main/default/objects/abc_Order__c/fields/abc_External_Cart_Id__c.field-meta.xml
<CustomField>
    <fullName>abc_External_Cart_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Guarantees API idempotency during retry requests from the web app.</inlineHelpText>
    <label>External Cart ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>