force-app/main/default/objects/abc_Order__c/fields/abc_Guest_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>abc_Guest_Last_Name__c</fullName>
    <description>if the user type is guest then this field will hold the user name</description>
    <label>Guest last name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>