force-app/main/default/objects/abc_Order__c/fields/abc_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>abc_Order_Date__c</fullName>
    <inlineHelpText>Required to calculate the &quot;&gt; 1 year old&quot; Batch class logic.</inlineHelpText>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>