force-app/main/default/objects/abc_Order__c/fields/abc_Order_Total__c.field-meta.xml
<CustomField>
    <fullName>abc_Order_Total__c</fullName>
    <inlineHelpText>SUM of abc_Total_Price__c on Line Items.</inlineHelpText>
    <label>Order Total</label>
    <summarizedField>abc_Order_Line_Item__c.abc_Total_Price__c</summarizedField>
    <summaryForeignKey>abc_Order_Line_Item__c.abc_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>