force-app/main/default/objects/abc_Order__c/fields/abc_Phone__c.field-meta.xml
<CustomField>
    <fullName>abc_Phone__c</fullName>
    <label>Phone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>