force-app/main/default/objects/abc_Order__c/fields/abd_Guest_first_name__c.field-meta.xml
<CustomField>
    <fullName>abd_Guest_first_name__c</fullName>
    <description>if the user type is guest then this field will hold the user name</description>
    <label>Guest first name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>