force-app/main/default/objects/abc_Order__c/validationRules/Order_date_can_not_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_date_can_not_be_in_the_past</fullName>
    <active>true</active>
    <errorConditionFormula>abc_Order_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>abc_Order_Date__c</errorDisplayField>
    <errorMessage>Order date can not be in the past</errorMessage>
</ValidationRule>